    options (Closes: #309362)
  * mass-bug: new script (Closes: #355505)
  * pts-subscribe.1: improve the wording of the manpage (Closes: #360027)
  * uscan: *really* fix the uninitialized value bug (Closes: #356959)
  * uscan: provide filenamemangle option to mangle the filename before
    attempting to save the download (Closes: #327404)

 -- Julian Gilbey <jdg@debian.org>  Fri, 31 Mar 2006 13:52:41 +0100

devscripts (2.9.16) unstable; urgency=low

  [ Julian Gilbey ]
  * Fix 2.9.15 changelog to refer to pts-subscribe, not pkg-subscribe
    (Closes: #353413)
  * bts: be stricter about bug number cruft (Closes: #356318)
  * bts: add spamreport as a synonym for reportspam
  * debcommit: add --help, --version
  * debdiff: fix unnecessary chdir (Closes: #354862)
  * debdiff: compare control files in multi-deb binary packages - this was
    just a coding problem, and could have been done for ages (Closes: #354868)
  * pts-subscribe: Depends on the "at" package (Closes: #353502)
  * uupdate: handle already-unpacked source code archives (Closes: #286253)
  * uscan: avoid warnings on one-word actions (Closes: #356959)
  * uscan: clarify manpage regarding spaces in URLs (Closes: #359190)
  * debian/rules: remove mention of DH_ALWAYS_EXCLUDE (see Bug#352626)

  [ Joey Hess ]
  * debcommit: Add program name to all error messages.

 -- Julian Gilbey <jdg@debian.org>  Wed, 29 Mar 2006 16:20:17 +0100

devscripts (2.9.15) unstable; urgency=low

  * bts: handle bts show pkg archive=yes more gracefully
  * bts: require mailx | mailutils (mailutils provides mailx anyhow)
  * bts: always allow Bug#NNNNNN: or #NNNNN etc. in commands (Closes:
    #353049)
  * bts: support caching RC bug pages (Closes: #236312)
  * bts: support subscribe/unsubscribe commands (Closes: #339661)
  * bts: support alternative sendmail command (Closes: #343752)
  * debdiff: handle multi-binary packages and allow comparison of control
    files from each corresponding pair of binary packages - thanks to