@@ -176,6 +176,9 @@ And now, in mostly alphabetical order, the scripts:
 
 - whodepends: check which maintainers' packages depend on a package
 
+- who-uploads [gnupg, debian-keyring, wget]: determine the most recent
+  uploaders of a package to the Debian archive
+
 - wnpp-alert [wget]: list installed packages which are orphaned or up
   for adoption
 
