@@ -275,6 +275,10 @@
 # 
 # No variables currently
 
+##### mass-bug
+# 
+# No variables currently
+
 ##### nmudiff
 # 
 # No variables currently
@@ -351,6 +355,14 @@
 ##### whodepends
 # 
 # No variables currently
+
+##### who-uploads
+# 
+# Maximum number of uploads to display per package
+# WHOUPLOADS_MAXUPLOADS=3
+# 
+# Colon-separated list of keyrings to examine by default
+# WHOUPLOADS_KEYRINGS=/usr/share/keyrings/debian-keyring.gpg:/usr/share/keyrings/debian-keyring.pgp
 
 ##### wnpp-alert
 # 
